--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
 <h1>CS5610 Spring 2016 Section 1</h1>
 
-<a href="assignment/index.html">Assignment</a>
+<a href="assignment/home.html">Assignment</a>
 <br/>
