--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -60,15 +60,25 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Admin</h1>
+            <h2>Users</h2>
 
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Username</th>
-                            <th>Password</th>
-                            <th>Role</th>
-                            <th>Action</th>
+                            <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Username</th>
+                            <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Password</th>
+                            <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Role</th>
+                            <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
+                        </tr>
+                        <tr>
+                            <th><input type="text" placeholder="username"></th>
+                            <th><input type="text" placeholder="password"></th>
+                            <th><input type="text" placeholder="role"></th>
+                            <th>
+                                <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
@@ -77,8 +87,8 @@
                             <td>&nbsp;</td>
                             <td>student</td>
                             <td>
-                                <button class="btn btn-danger">Delete</button>
-                                <button class="btn btn-success">Edit</button>
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </td>
                         </tr>
                         <tr>
@@ -86,26 +96,17 @@
                             <td>&nbsp;</td>
                             <td>faculty | admin</td>
                             <td>
-                                <button class="btn btn-danger">Delete</button>
-                                <button class="btn btn-success">Edit</button>
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </td>
                         </tr>
                         <tr>
                             <td>Charlie</td>
                             <td>&nbsp;</td>
-                            <td>student</td>
-                            <td>
-                                <button class="btn btn-danger">Delete</button>
-                                <button class="btn btn-success">Edit</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Beyond</td>
                             <td>&nbsp;</td>
-                            <td>student</td>
                             <td>
-                                <button class="btn btn-danger">Delete</button>
-                                <button class="btn btn-success">Edit</button>
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </td>
                         </tr>
                     </tbody>
