--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Update</button>
+                        <a href="profile.html" class="btn btn-default" role="button">Update</a>
                     </div>
                 </div>
             </form>
