adjusted admin page

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -72,9 +72,16 @@
                             <th><span class="glyphicon glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>Action</th>
                         </tr>
                         <tr>
-                            <th><input type="text" placeholder="username"></th>
-                            <th><input type="text" placeholder="password"></th>
-                            <th><input type="text" placeholder="role"></th>
+                            <th>
+                                <input type="text" class="form-control" placeholder="username">
+
+                            </th>
+                            <th>
+                                <input type="text" class="form-control" placeholder="password">
+                            </th>
+                            <th>
+                                <input type="text" class="form-control" placeholder="role">
+                            </th>
                             <th>
                                 <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
                                 <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
