--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -83,8 +83,12 @@
                                 <input type="text" class="form-control" placeholder="role">
                             </th>
                             <th>
-                                <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-success" role="button">
+                                    <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                </a>
                             </th>
                         </tr>
                     </thead>
@@ -94,8 +98,12 @@
                             <td>&nbsp;</td>
                             <td>student</td>
                             <td>
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-danger" role="button">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
                             </td>
                         </tr>
                         <tr>
@@ -103,8 +111,12 @@
                             <td>&nbsp;</td>
                             <td>faculty | admin</td>
                             <td>
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-danger" role="button">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
                             </td>
                         </tr>
                         <tr>
@@ -112,8 +124,12 @@
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
                             <td>
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-danger" role="button">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
                             </td>
                         </tr>
                     </tbody>
