--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -76,29 +76,45 @@
                         <tr>
                             <td><input type="text" class="form-control" placeholder="name"></td>
                             <td>
-                                <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-success" role="button">
+                                    <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                </a>
                             </td>
                         </tr>
                         <tr>
                             <td>Registration Form</td>
                             <td>
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-danger" role="button">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
                             </td>
                         </tr>
                         <tr>
                             <td>Contact List</td>
                             <td>
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-danger" role="button">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
                             </td>
                         </tr>
                         <tr>
                             <td>To Do List</td>
                             <td>
-                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <a href="#" class="btn btn-danger" role="button">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                                <a href="#" class="btn btn-primary" role="button">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
                             </td>
                         </tr>
                     </tbody>
