--- a/public/experiments/landingPage/landingPage.html
+++ b/public/experiments/landingPage/landingPage.html
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
+            <a class="navbar-brand topnav" href="#">CS 5610</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -53,7 +53,7 @@
                     <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#services">Services</a>
+                    <a href="#services">Assignments</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -74,8 +74,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>Landing Page</h1>
-                    <h3>A Template by Start Bootstrap</h3>
+                    <h1>Welcome!</h1>
+                    <h3>Ning Luo's Homepage</h3>
                     <hr class="intro-divider">
                     <ul class="list-inline intro-social-buttons">
                         <li>
