--- a/public/experiments/landingPage/landingPage.html
+++ b/public/experiments/landingPage/landingPage.html
@@ -125,12 +125,12 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+            <div class="col-lg-5 col-lg-offset-1  col-sm-push-6  col-sm-6">
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Project</h2>
                 <h3>Electronic Personal Health Record</h3>
-                <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                <p class="lead"> A Web portal for patients to view their demographics, medical records (e.g. diagnosis, lab results, medication list, allergies, etc.), appointments (past & upcoming), and so on. </p>
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                 <img class="img-responsive" src="img/dog.png" alt="">
@@ -171,10 +171,10 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-lg-push-2">
                 <h2>Connect to Ning:</h2>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-lg-pull-2">
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
