Added landing page Linked form maker to landing page Modified form maker

--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -32,14 +32,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="../index.html">Back to Ning's page</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -76,7 +76,7 @@
                         <tr>
                             <td><input type="text" class="form-control" placeholder="name"></td>
                             <td>
-                                <a href="#" class="btn btn-primary" role="button">
+                                <a href="#" class="btn btn-info" role="button">
                                     <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
                                 </a>
                                 <a href="#" class="btn btn-success" role="button">
