--- a/public/experiments/landingPage/landingPage.html
+++ b/public/experiments/landingPage/landingPage.html
@@ -106,7 +106,7 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Assignment</h2>
-                <h3>Form Maker</h3>
+                <a href="#"><h3>Form Maker</h3></a>
                 <p class="lead">A Web application that allow users to create forms and share them on the Web as single pages or embedded in their own Web pages</p>
             </div>
             <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -129,7 +129,7 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Project</h2>
-                <h3>Electronic Personal Health Record</h3>
+                <a href="#"><h3>Electronic Personal Health Record</h3></a>
                 <p class="lead"> A Web portal for patients to view their demographics, medical records (e.g. diagnosis, lab results, medication list, allergies, etc.), appointments (past & upcoming), and so on. </p>
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
