Modified bottom connect banner

--- a/public/index.html
+++ b/public/index.html
@@ -177,10 +177,10 @@
             <div class="col-lg-6 col-lg-pull-2">
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/NingLuo/webdev" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/ning-luo-78a303b6?trk=nav_responsive_tab_profile" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                     </li>
                 </ul>
             </div>
