--- a/public/experiments/Assignment/home.html
+++ b/public/experiments/Assignment/home.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Profile</title>
+    <title>Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html">Form Maker</a>
+            <a class="navbar-brand" href="s.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -59,48 +59,17 @@
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-
-            <h1>Profile</h1>
-
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <label for="user-name" class="col-sm-2 control-label">Username:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="user-name" placeholder="Username">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">Password:</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="fName" class="col-sm-2 control-label">First Name:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="fName" placeholder="First Name">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="lName" class="col-sm-2 control-label">Last Name:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="lName" placeholder="Last Name">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">Email:</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="email" placeholder="Email">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <a href="profile.html" class="btn btn-default" role="button">Update</a>
-                    </div>
-                </div>
-            </form>
-
+            <h1>Welcome!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis condimentum vel justo vel luctus.
+                Sed malesuada nunc at dolor dapibus rutrum. Praesent id tempor felis. Nunc volutpat fringilla euismod.
+                Nunc id pretium diam. Curabitur pretium metus sed ante dictum ullamcorper. Donec congue,
+                felis iaculis ultrices fringilla, enim nisl posuere erat, sed lacinia nulla magna ut ipsum.
+                Donec euismod, mauris nec condimentum tempor, turpis erat tincidunt sem, tempus eleifend nulla elit in dui.
+                Donec suscipit accumsan lobortis. Nullam gravida posuere sapien quis eleifend.
+                In dui augue, auctor at venenatis vel, vestibulum id sapien.
+                Maecenas facilisis egestas facilisis. Nulla facilisi. Nam quis nisl ut velit commodo posuere.
+                Vivamus accumsan ligula ut ipsum tempus, vel rutrum lectus fringilla.
+            </p>
         </div>
     </div>
 </div>
