--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -62,7 +62,7 @@
             <h1>Forms</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation" class="active"><a href="#">Forms</a></li>
-                <li role="presentation"><a href="#">Fields</a></li>
+                <li role="presentation"><a href="fields.html">Fields</a></li>
             </ul>
             <div class="table-responsive">
                 <table class="table table-striped">
