--- a/public/assignment/fields.html
+++ b/public/assignment/fields.html
@@ -36,10 +36,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="../index.html">Back to Ning's page</a></li>
+                <li><a href="#">Username</a></li>
+                <li><a href="../index.html">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
@@ -160,6 +158,91 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label>Roles:</label>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div>
+                                <label class="checkbox-inline">
+                                    <input type="checkbox" value="option1"> Admin
+                                </label>
+                                </div>
+                                <div>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" value="option1"> Student
+                                    </label>
+                                </div>
+                                <div>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" value="option1"> User
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-sm-push-1">
+                                <a href="" class="btn btn-default" role="button">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
+                                <a href="" class="btn btn-default" role="button">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </a>
+                                <a href="" class="btn btn-default" role="button">
+                                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                </a>
+                                <a href="" class="btn btn-default" role="button">
+                                    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                                </a>
+                            </div>
+                        </div>
+                </div>
+
+                <div class="form-group">
+                    <label>License Agreement:</label>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div>
+                                <label class="radio-inline"><input type="radio" name="License Agreement">Yes</label>
+                            </div>
+                            <div>
+                                <label class="radio-inline"><input type="radio" name="License Agreement">No</label>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-sm-push-1">
+                            <a href="" class="btn btn-default" role="button">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="" class="btn btn-default" role="button">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                            <a href="" class="btn btn-default" role="button">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="" class="btn btn-default" role="button">
+                                <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="newField" class="form-control-label">Add New Field:</label>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <select id="newField" class="form-control">
+                                <option>Single Line Text</option>
+                                <option>Date</option>
+                                <option>Dropdown</option>
+                                <option>Checkboxes</option>
+                                <option>Radio buttons</option>
+                                <option>Paragraph Text Field</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-6 col-sm-push-1">
+                            <a href="" class="btn btn-default" role="button">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
