modified project content on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -129,8 +129,8 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Project</h2>
-                <a href="#"><h3>Electronic Personal Health Record</h3></a>
-                <p class="lead"> A Web portal for patients to view their demographics, medical records (e.g. diagnosis, lab results, medication list, allergies, etc.), appointments (past & upcoming), and so on. </p>
+                <a href="#"><h3>Find a doctor</h3></a>
+                <p class="lead"> A Web application where users can search and rate healthcare providers</p>
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                 <img class="img-responsive" src="img/dog.png" alt="">
