--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -43,6 +43,7 @@
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
 <script src="views/users/register.controller.js"></script>
+<script src="views/users/profile.controller.js"></script>
 
 
 </body>
