modified home page

--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Assignment</h2>
-                <a href="assignment/"><h3>Form Maker</h3></a>
+                <a href="assignment/#/home"><h3>Form Maker</h3></a>
                 <p class="lead">A Web application that allow users to create forms and share them on the Web as single pages or embedded in their own Web pages</p>
             </div>
             <div class="col-lg-5 col-lg-offset-2 col-sm-6">
