added content in main.control.js

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -53,6 +53,7 @@
 
 <script src="app.js"></script>
 <script src="config.js"></script>
+<script src="views/main/main.control.js"></script>
 
 </body>
 
