added content detail.view.html

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -54,7 +54,9 @@
 <script src="app.js"></script>
 <script src="config.js"></script>
 <script src="views/main/main.control.js"></script>
-<script src="views/search/result.controller.js"></script>
+<script src="views/search/result.control.js"></script>
+<script src="views/search/detail.control.js"></script>
+<script src="views/services/doctorSearch.service.js"></script>
 
 </body>
 
