added login, register and logout function

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -57,6 +57,9 @@
 <script src="views/search/result.control.js"></script>
 <script src="views/search/detail.control.js"></script>
 <script src="views/services/doctorSearch.service.js"></script>
+<script src="views/services/user.service.js"></script>
+<script src="views/users/login.control.js"></script>
+<script src="views/header/header.control.js"></script>
 
 </body>
 
