added favorites and rate

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -60,6 +60,7 @@
 <script src="views/services/user.service.js"></script>
 <script src="views/users/login.control.js"></script>
 <script src="views/header/header.control.js"></script>
+<script src="views/favorites/favorite.control.js"></script>
 
 </body>
 
