--- a/public/project/index.html
+++ b/public/project/index.html
@@ -61,6 +61,8 @@
 <script src="views/users/login.control.js"></script>
 <script src="views/header/header.control.js"></script>
 <script src="views/favorites/favorite.control.js"></script>
+<script src="views/rate/rate.control.js"></script>
+<script src="views/reviews/review.control.js"></script>
 
 </body>
 
