added messages view and controller cache all search result locally modified TryApi

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -34,7 +34,7 @@
 <body>
 
 <div ng-include="'views/header/header.view.html'"></div>
-<div ng-include="'views/searchBar/searchBar.view.html'"></div>
+<!--<div ng-include="'views/searchBar/searchBar.view.html'"></div>-->
 
 <!-- Page Content -->
 <div class="container-fluid">
@@ -64,6 +64,7 @@
 <script src="views/favorites/favorite.control.js"></script>
 <script src="views/rate/rate.control.js"></script>
 <script src="views/reviews/review.control.js"></script>
+<script src="views/messages/message.control.js"></script>
 
 </body>
 
