--- a/public/project/index.html
+++ b/public/project/index.html
@@ -65,6 +65,7 @@
 <script src="views/rate/rate.control.js"></script>
 <script src="views/reviews/review.control.js"></script>
 <script src="views/messages/message.control.js"></script>
+<script src="views/reviews/editeReview.control.js"></script>
 
 </body>
 
