added safety check on multiple views

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -61,6 +61,7 @@
 <script src="views/services/doctorSearch.service.js"></script>
 <script src="views/services/user.service.js"></script>
 <script src="views/users/login.control.js"></script>
+<script src="views/users/profile.control.js"></script>
 <script src="views/header/header.control.js"></script>
 <script src="views/favorites/favorite.control.js"></script>
 <script src="views/rate/rate.control.js"></script>
