added email field popup

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -50,6 +50,7 @@
 <script src="views/forms/multipleLinePop.controller.js"></script>
 <script src="views/forms/datePop.controller.js"></script>
 <script src="views/forms/dropDownPop.controller.js"></script>
+<script src="views/forms/emailPop.controller.js"></script>
 <script src="directive/lnSortable.js"></script>
 
 </body>
