switch lnSortable to ui Sortable of angular ui

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -54,6 +54,7 @@
 <script src="views/forms/checkboxPop.controller.js"></script>
 <script src="views/forms/radioButtonPop.controller.js"></script>
 <script src="directive/lnSortable.js"></script>
+<script src="directive/sortable.js"></script>
 
 </body>
 </html>
