refactor project structure, added client folder, server folder added search bar into result.view

--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Project</h2>
-                <a href="project/index.html"><h3>Find a doctor</h3></a>
+                <a href="project/client"><h3>Find a doctor</h3></a>
                 <p class="lead"> A Web application where users can search and rate healthcare providers</p>
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
