--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -11,8 +11,8 @@
     <title>Bare - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="style/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css" rel="stylesheet">
+    <link href="../style/bootstrap.min.css" rel="stylesheet">
+    <link href="../style/style.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
@@ -52,14 +52,15 @@
 
 <script src="app.js"></script>
 <script src="config.js"></script>
-<script src="views/main/main.control.js"></script>
+<script src="views/main/home.control.js"></script>
 <script src="views/search/result.control.js"></script>
 <script src="views/search/detail.control.js"></script>
-<script src="views/services/doctorSearch.service.js"></script>
-<script src="views/services/user.service.js"></script>
+<script src="services/doctorSearch.service.js"></script>
+<script src="services/user.service.js"></script>
 <script src="views/users/login.control.js"></script>
 <script src="views/users/profile.control.js"></script>
 <script src="views/header/header.control.js"></script>
+<!--<script src="views/searchBar/searchBar.control.js"></script>-->
 <script src="views/favorites/favorite.control.js"></script>
 <script src="views/rate/rate.control.js"></script>
 <script src="views/reviews/review.control.js"></script>
