implement register on server side

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -56,8 +56,9 @@
 <script src="views/search/result.control.js"></script>
 <script src="views/search/detail.control.js"></script>
 <script src="services/doctorSearch.service.js"></script>
-<script src="services/user.service.js"></script>
+<script src="services/user.service.client.js"></script>
 <script src="views/users/login.control.js"></script>
+<script src="views/users/register.control.js"></script>
 <script src="views/users/profile.control.js"></script>
 <script src="views/header/header.control.js"></script>
 <!--<script src="views/searchBar/searchBar.control.js"></script>-->
