project: added send message to other user function in detial.view.html, also refactor login controller, so it redirect to previous url where the user was sent from.

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -78,6 +78,7 @@
 <script src="views/reviews/editeReview.control.js"></script>
 <script src="views/favorites/favoriteDetail.control.js"></script>
 <script src="views/search/insuranceDetail.control.js"></script>
+<script src="views/search/sendMsgPop.control.js"></script>
 
 </body>
 
