project: implemented addReply feature

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -83,6 +83,7 @@
 <script src="views/search/insuranceDetail.control.js"></script>
 <script src="views/search/sendMsgPop.control.js"></script>
 <script src="views/search/docVerifPop.control.js"></script>
+<script src="views/search/docReplyPop.control.js"></script>
 
 </body>
 
