project: refactored main page

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap Core CSS -->
     <!--<link href="../style/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../style/style.css" rel="stylesheet">
     <link href="../style/angular-input-stars.css" rel="stylesheet">
@@ -20,13 +21,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-    <!-- Custom CSS -->
-    <style>
-        body {
-            padding-top: 70px;
-            /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-        }
-    </style>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -42,8 +37,7 @@
 
 <!-- Page Content -->
 <div class="container-fluid">
-    <div ng-view></div>
-
+    <div class="full" ng-view ></div>
 </div>
 <!-- /.container -->
 
