project: refactored main page and search feature; added new google location api service

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -63,6 +63,7 @@
 <script src="services/doctor.service.client.js"></script>
 <script src="services/user.service.client.js"></script>
 <script src="services/review.service.client.js"></script>
+<script src="services/location.service.client.js"></script>
 <script src="views/users/login.control.js"></script>
 <script src="views/users/register.control.js"></script>
 <script src="views/users/profile.control.js"></script>
