project: added link to demo video

--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,7 @@
                 <h2 class="section-heading">Project</h2>
                 <a href="project/client"><h3>Find a doctor</h3></a>
                 <p class="lead"> A Web application where users can search and rate healthcare providers</p>
+                <a href="https://www.youtube.com/watch?v=T1OWb5OCPNU"><h4>Demo Video</h4></a>
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                 <img class="img-responsive" src="img/dog.png" alt="">
